# hiring_test

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp  sal.h
